--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   flutter_barcode_sdk: ^2.2.2
   flutter_document_scan_sdk: ^1.0.1
   flutter_ocr_sdk: ^1.1.0
+  camera_windows: 
+    git:
+      url: https://github.com/yushulx/flutter_camera_windows.git
 
 dev_dependencies:
   flutter_test:
